gitops/infrastructure/core/addons/kube-prometheus-stack/httproute-grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-public
  namespace: observability
spec:
  parentRefs:
    - name: public
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "grafana.${BASE_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /public-dashboards
        - path:
            type: PathPrefix
            value: /public
        - path:
            type: PathPrefix
            value: /api/public
      backendRefs:
        - name: observability-kube-prometheus-stack-grafana
          port: 80
